@@ -1675,9 +1675,8 @@ function update_host_status($status, $host_id, &$ping, $ping_availability, $prin
 		} else {
 			$host['status_event_count']++;
 		}
-	/* host is up!! */
 	} else {
-		/* update total polls and availability */
+		/* host is back up!  Update total polls and availability */
 		$host['total_polls']++;
 		$host['availability'] = 100 * ($host['total_polls'] - $host['failed_polls']) / $host['total_polls'];
 
@@ -1736,7 +1735,7 @@ function update_host_status($status, $host_id, &$ping, $ping_availability, $prin
 		}
 
 		/* the host was down, now it's recovering */
-		if (($host['status'] == HOST_DOWN) || ($host['status'] == HOST_RECOVERING )) {
+		if ($host['status'] == HOST_DOWN || $host['status'] == HOST_RECOVERING) {
 			/* just up, change to recovering */
 			if ($host['status'] == HOST_DOWN) {
 				$host['status'] = HOST_RECOVERING;
@@ -1752,28 +1751,19 @@ function update_host_status($status, $host_id, &$ping, $ping_availability, $prin
 
 				$issue_log_message = true;
 
-				/* update the recovery date only if the recovery count is 1 */
-				if ($host['status_event_count'] == $ping_recovery_count) {
-					$host['status_rec_date'] = time();
-				}
-
-				/* reset the event counter */
+				$host['status_rec_date']    = time();
 				$host['status_event_count'] = 0;
-				/* host is recovering, but not ready to issue log message */
-			} else {
-				/* host recovering for the first time, set event date */
-				if ($host['status_event_count'] == $ping_recovery_count) {
-					$host['status_rec_date'] = time();
-				}
 			}
 		} else {
 			/* host was unknown and now is up */
 			$host['status'] = HOST_UP;
+
 			$host['status_event_count'] = 0;
 		}
 	}
+
 	/* if the user wants a flood of information then flood them */
-	if (($host['status'] == HOST_UP) || ($host['status'] == HOST_RECOVERING)) {
+	if ($host['status'] == HOST_UP || $host['status'] == HOST_RECOVERING) {
 		/* log ping result if we are to use a ping for reachability testing */
 		if ($ping_availability == AVAIL_SNMP_AND_PING) {
 			cacti_log("Device[$host_id] PING: " . $ping->ping_response, $print_data_to_stdout, 'PING', POLLER_VERBOSITY_HIGH);
